edits for embedded videos

--- a/index.html
+++ b/index.html
@@ -72,18 +72,23 @@
 				</section>
 				<section>
 					<section>
-						<video src="videos/intro-video.webmhd.webm" controls></video>
+						<h2>Video Examples</h2>
+						<iframe src="//player.vimeo.com/video/70016164" width="500" height="328" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
 					</section>
 					<section>
-						<h2>Video References</h2>
-						<ul>
-							<li><a href="http://vimeo.com/70016164">http://vimeo.com/70016164</a> - <br/>Andrew Sorensen and Ben Swift performing at MUME Algorave, Sydney, June 2013.</li>
-							<li><a href="https://www.youtube.com/watch?v=YrbIaE6Pg5E">https://www.youtube.com/watch?v=YrbIaE6Pg5E</a> - <br/>Algorave @ MS Stubnitz, Canary Wharf, 28 April 2013</li>
-							<li><a href="https://www.youtube.com/watch?v=04TcXlC9IBw">https://www.youtube.com/watch?v=04TcXlC9IBw</a> - <br/>Thor Magnusson at ICMC 2011</li>
-							<li><a href="https://www.youtube.com/watch?v=oL3HPvEVXwU">https://www.youtube.com/watch?v=oL3HPvEVXwU</a> - <br/>Leafcutter John and Yaxu</li>
-							<li><a href="https://www.youtube.com/watch?v=bMP-7POtML0">https://www.youtube.com/watch?v=bMP-7POtML0</a> - <br/>Meta-Ex at #hotcode conference 2013, Kyiv, Ukraine</li>
-							<li><a href="https://www.youtube.com/watch?v=UuV_uQWpi5s">https://www.youtube.com/watch?v=UuV_uQWpi5s</a> - <br/>Steel City Pubcode 2014/01/18</li>
-						</ul>
+						<iframe width="560" height="315" src="//www.youtube.com/embed/YrbIaE6Pg5E" frameborder="0" allowfullscreen></iframe>
+					</section>
+					<section>
+						<iframe width="420" height="315" src="//www.youtube.com/embed/04TcXlC9IBw" frameborder="0" allowfullscreen></iframe>
+					</section>
+					<section>
+						<iframe width="560" height="315" src="//www.youtube.com/embed/oL3HPvEVXwU" frameborder="0" allowfullscreen></iframe>
+					</section>
+					<section>
+						<iframe width="560" height="315" src="//www.youtube.com/embed/bMP-7POtML0" frameborder="0" allowfullscreen></iframe>
+					</section>
+					<section>
+						<iframe width="420" height="315" src="//www.youtube.com/embed/UuV_uQWpi5s" frameborder="0" allowfullscreen></iframe>
 					</section>
 				</section>
 				<section>
@@ -112,13 +117,14 @@
 					<a href="images/venn.png"><img src="images/venn2.png" alt="venn2" /></a>
 				</section>
 				<section>
-					<h2>An alternative [5]</h2>
+					<h2>An Alternative</h2>
 					<ul>
 						<li>Programming for yourself</li>
 						<li>No distinction between making and using</li>
 						<li>Live improvisation - using by making</li>
 						<li>Experimentation and play</li>
 					</ul>	
+					<p><small>Sourced from <a href="http://vimeo.com/69687342">vimeo.com/69687342</a></small></p>
 				</section>
 				<section>
 					<p><a href="images/excel.jpg"><img src="images/excel.jpg" alt="Spreadsheet" /></a></p>
@@ -132,6 +138,7 @@
 						<li>Short lifespan</li>
 						<li>Mutable rules</li>
 					</ul>	
+					<p><small>Sourced from <a href="http://vimeo.com/69687342">vimeo.com/69687342</a></small></p>
 				</section>
 				<section>
 					<p><blockquote>"These days just about all electronic music is made using software, but with artificial barriers between the people creating the software algorithms and the people making the music."</blockquote></p>
@@ -143,8 +150,7 @@
 					<p><em>https://flic.kr/p/ckX9Cw</em></p>
 				</section>
 				<section>
-					<video src="videos/andrew-sorenson-ted.webmhd.webm" controls></video>
-					<p><small><a href="https://www.youtube.com/watch?v=GSGKEy8vHqg">youtube.com/watch?v=GSGKEy8vHqg</a></small></p>
+					<iframe width="560" height="315" src="//www.youtube.com/embed/GSGKEy8vHqg" frameborder="0" allowfullscreen></iframe>
 				</section>
 				<section>
 					<h2>TOPLAP.org</h2>
@@ -164,7 +170,7 @@
 				</section>
 				<section>
 					<video src="videos/orphx.webmhd.webm" controls></video>
-					<p><small><a href="https://www.youtube.com/watch?v=XJOgTG-WdXs">youtube.com/watch?v=XJOgTG-WdXs</a></small></p>
+					<iframe width="560" height="315" src="//www.youtube.com/embed/XJOgTG-WdXs" frameborder="0" allowfullscreen></iframe>
 				</section>
 				<section>
 					<section>
@@ -181,39 +187,45 @@
 						<p><a href="images/sheffield2.jpg"><img src="images/sheffield2.jpg" alt="Sheffield Algorave 2" /></a></p>
 						<p><small><a href="http://www.vice.com/read/algorave-is-the-future-of-dance-music-if-youre-an-html-coder">vice.com/read/algorave-is-the-future-of-dance-music-if-youre-an-html-coder</a></small></p>
 					</section>
+					<section>
+						<iframe width="560" height="315" src="//www.youtube.com/embed/fZppekP_XAg" frameborder="0" allowfullscreen></iframe>
+					</section>
+					<section>
+						<iframe width="560" height="315" src="//www.youtube.com/embed/dFQ9FrKYF3k" frameborder="0" allowfullscreen></iframe>
+					</section>
+					<section>
+						<iframe width="560" height="315" src="//www.youtube.com/embed/kJphgzBAPJo" frameborder="0" allowfullscreen></iframe>
+					</section>
+
 				</section>
 				<section>
 					<h2>Experience Beyond Understanding</h2>
 				</section>
 				<section>
-					<video src="videos/benoit-mandelbrots.webmhd.webm" controls></video>
-					<p><small><a href="https://www.youtube.com/watch?v=jlx6KNo5Eok">youtube.com/watch?v=jlx6KNo5Eok</a></small></p>
+					<iframe width="560" height="315" src="//www.youtube.com/embed/jlx6KNo5Eok" frameborder="0" allowfullscreen></iframe>
 				</section>
 				<section>
 					<section>
 						<h2>Risks</h2>
-						<p><a href="images/risk.png"><img src="images/risk.png" alt="risk"/></a></p>
-						<p><em>"It's the real risk inherent in live coding that makes the performances palpable. We need to find new ways to show and surf risk!"</em></p>
-					</section>
-					<section>
-						<a href="images/silence.jpg"><img src="images/silence.jpg" alt="silence"/></a>
+						<blockquote class="twitter-tweet" lang="en"><p><a href="https://twitter.com/kindohm">@kindohm</a> It&#39;s the real risk inherent in live coding that makes the 
+							performances palpable. We need to find new ways to show and surf risk!</p>&mdash; Meta-eX (@meta_ex) 
+							<a href="https://twitter.com/meta_ex/statuses/445467545660051456">March 17, 2014</a></blockquote>
+						<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 					</section>
 				</section>
 				<section>
 					<h2>Algorave</h2>
-					<p><em>"sounds wholly or predominantly characterized by the emission of a succession of repetitive conditionals"</em></p>
+					<p><blockquote>"sounds wholly or predominantly characterized by the emission of a succession of repetitive conditionals"</blockquote></p>
 					<ul>
 						<li>Algorave.com</li>
 						<li>Algorithmic music (often live coded) in dance/club environments</li>
 					</ul>
 				</section>
 				<section>
-					<video src="videos/meta-ex.webmhd.webm" controls></video>
-					<p><small><a href="https://www.youtube.com/watch?v=ndnWwzEM5Pk">youtube.com/watch?v=ndnWwzEM5Pk</a></small></p>
+					<iframe width="560" height="315" src="//www.youtube.com/embed/ndnWwzEM5Pk" frameborder="0" allowfullscreen></iframe>
 				</section>
 				<section>
-					<video src="videos/AmsterdamAlgorave.webm" controls></video>
-					<p><small><a href="https://www.youtube.com/watch?v=CEXvk51IdEo">youtube.com/watch?v=CEXvk51IdEo</a></small></p>
+					<iframe width="420" height="315" src="//www.youtube.com/embed/CEXvk51IdEo" frameborder="0" allowfullscreen></iframe>
 				</section>
 				<section>
 					<h2>Is live coding important?</h2>
@@ -236,20 +248,14 @@
 					</ul>
 				</section>
 				<section>
-					<video src="videos/gibber.webmhd.webm" controls></video>
-					<p><small><a href="http://vimeo.com/80745664">vimeo.com/80745664</a></small></p>
+					<iframe src="//player.vimeo.com/video/80745664" width="500" height="313" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
 				</section>
 				<section>
 					<h2>Local Community and Scene</h2>
 					<ul>
 						<li>TC Computer Music Group<br/>
 							<a href="http://meetup.com/Twin-Cities-Computer-Music-Interest-Group/">meetup.com/Twin-Cities-Computer-Music-Interest-Group</a></li>
-						<li>Pre-event music at JavaScript MN<br/>
-							<a href="http://meetup.com/JavaScriptMN">meetup.com/JavaScriptMN</a></li>
 					</ul>
-				</section>
-				<section>
-					<h2>Demo / Performance with Tidal</h2>
 				</section>
 				<section>
 					<h1>THE END</h1>
