--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
 
 				</section>
 				<section>
-					<h2>Experience Beyond Understanding</h2>
+					<h2>"Experience Beyond Understanding"</h2>
+					<p><small><a href="http://vimeo.com/69687342">http://vimeo.com/69687342</a></small></p>
 				</section>
 				<section>
 					<iframe width="560" height="315" src="//www.youtube.com/embed/jlx6KNo5Eok" frameborder="0" allowfullscreen></iframe>
