--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 					<iframe src="//player.vimeo.com/video/80745664" width="500" height="313" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
 				</section>
 				<section>
-					<h2>Local Community and Scene</h2>
+					<h2>Twin Cities Community and Scene</h2>
 					<ul>
 						<li>TC Computer Music Group<br/>
 							<a href="http://meetup.com/Twin-Cities-Computer-Music-Interest-Group/">meetup.com/Twin-Cities-Computer-Music-Interest-Group</a></li>
