--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
 						<li>Tidal (Haskell-based DSL)<br/><br/>and...<br/><br/></li>
 						<li>Gibber (JavaScript. Yes, JavaScript)</li>
 					</ul>
+					<p><small>Links for downloads on <a href="http://toplap.org">toplap.org</a></small></p>
 				</section>
 				<section>
 					<iframe src="//player.vimeo.com/video/80745664" width="500" height="313" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
