--- a/index.html
+++ b/index.html
@@ -62,13 +62,15 @@
 						<li>Makeup of live coded music</li>
 						<li>Impact on music and culture</li>
 						<li>Environments</li>
-						<li>Live demo / performance</li>
 					</ul>	
 					<p>&nbsp;</p>
 					<p><strong>Lots of video examples</strong></p>
 				</section>
 				<section>
 					<h2>What is live coded music?</h2>
+					<p><br/><blockquote><em>"The last century was about how to create electronic art. This century is about how to perform it."</em></blockquote></p>
+					<p><small>- Robert Henke</small></p>
+					<p><small><a href="http://toplap.org/fibersteim-write-up-and-marcel-wierckx-keynote-transcript/">toplap.org/fibersteim-write-up-and-marcel-wierckx-keynote-transcript/</a></small></p>
 				</section>
 				<section>
 					<section>
@@ -105,10 +107,6 @@
 					<p><blockquote>"Live Coding has the potential to bend systems such that they can be used in the pursuit of personal notions of excellence and originality"<br/><br/></blockquote></p>
 					<p><small>- Keynote speech for the Coded Matter(s) symposium – 23 March 2014 by Marcel Wierckx<br/>
 						<a href="http://lownorth.nl/text/FiberKeynoteMarcelWierckx.pdf">lownorth.nl/text/FiberKeynoteMarcelWierckx.pdf</a></small></p>
-				</section>
-				<section>
-					<h2>Where is live coding?</h2>
-					<a href="images/map.png"><img src="images/map.png" alt="map" /></a>
 				</section>
 				<section>
 					<a href="images/venn.png"><img src="images/venn1.png" alt="venn1" /></a>
@@ -151,6 +149,10 @@
 				</section>
 				<section>
 					<iframe width="560" height="315" src="//www.youtube.com/embed/GSGKEy8vHqg" frameborder="0" allowfullscreen></iframe>
+				</section>
+				<section>
+					<h2>Where is live coding?</h2>
+					<a href="images/map.png"><img src="images/map.png" alt="map" /></a>
 				</section>
 				<section>
 					<h2>TOPLAP.org</h2>
@@ -215,7 +217,6 @@
 				</section>
 				<section>
 					<h2>Algorave</h2>
-					<p><blockquote>"sounds wholly or predominantly characterized by the emission of a succession of repetitive conditionals"</blockquote></p>
 					<ul>
 						<li>Algorave.com</li>
 						<li>Algorithmic music (often live coded) in dance/club environments</li>
@@ -229,8 +230,6 @@
 				</section>
 				<section>
 					<h2>Is live coding important?</h2>
-					<p style="text-align: left;"><em>"The last century was about how to create electronic art. This century is about how to perform it."<br/>
-						<small>- <a href="http://toplap.org/fibersteim-write-up-and-marcel-wierckx-keynote-transcript/">toplap.org/fibersteim-write-up-and-marcel-wierckx-keynote-transcript</a></small></em></p>
 					<ul>
 						<li>The next generation</li>
 						<li>Live coding as an educational tool</li>
@@ -239,24 +238,23 @@
 				<section>
 					<h2>Live Coding Environments</h2>
 					<ul>
-						<li>Supercollider / sclang</li>
-						<li>ChucK</li>
-						<li>Overtone (Clojure)</li>
-						<li>Extempore (xtlang / Lisp syntax)</li>
-						<li>Tidal (Haskell-based DSL)<br/><br/>and...<br/><br/></li>
-						<li>Gibber (JavaScript. Yes, JavaScript)</li>
+						<li><a href="http://supercollider.sourceforge.net/">Supercollider / sclang</a></li>
+						<li><a href="http://chuck.cs.princeton.edu/">ChucK</a></li>
+						<li><a href="http://overtone.github.io/">Overtone (Clojure)</a></li>
+						<li><a href="http://extempore.moso.com.au/">Extempore (xtlang / Lisp syntax)</a></li>
+						<li><a href="http://yaxu.org/tidal">Tidal (Haskell-based DSL)</a></li>
 					</ul>
-					<p><small>Links for downloads on <a href="http://toplap.org">toplap.org</a></small></p>
+					<p><br/>...and yes, JavaScript environments:</p>
+					<ul>
+						<li><a href="http://gibber.mat.ucsb.edu/">Gibber</a></li>
+						<li><a href="http://www.chadmckinneyaudio.com/lich/">Lich</a></li>
+						<li><a href="http://wavepot.com/">Wavepot</a></li>
+					</ul>
+					<p><br/><a href="http://toplap.org/wiki/ToplapSystems">List of live coding
+						environments on toplap.org</a></p>
 				</section>
 				<section>
 					<iframe src="//player.vimeo.com/video/80745664" width="500" height="313" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
-				</section>
-				<section>
-					<h2>Twin Cities Community and Scene</h2>
-					<ul>
-						<li>TC Computer Music Group<br/>
-							<a href="http://meetup.com/Twin-Cities-Computer-Music-Interest-Group/">meetup.com/Twin-Cities-Computer-Music-Interest-Group</a></li>
-					</ul>
 				</section>
 				<section>
 					<h1>THE END</h1>
